@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "pbsurvey"
 #
-# Auto generated 15-05-2006 09:58
+# Auto generated 18-05-2006 11:46
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -32,8 +32,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'author_company' => '',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
-	'version' => '1.0.5',
-	'_md5_values_when_last_written' => 'a:230:{s:9:"Changelog";s:4:"facc";s:21:"ext_conf_template.txt";s:4:"8a3d";s:12:"ext_icon.gif";s:4:"e008";s:17:"ext_localconf.php";s:4:"d32c";s:15:"ext_php_api.dat";s:4:"f350";s:14:"ext_tables.php";s:4:"c45a";s:14:"ext_tables.sql";s:4:"73d9";s:28:"ext_typoscript_constants.txt";s:4:"3aa3";s:24:"ext_typoscript_setup.txt";s:4:"c12d";s:15:"flexform_ds.xml";s:4:"d7ef";s:7:"tca.php";s:4:"c5ed";s:34:"csh/de.locallang_pbsurvey_item.xml";s:4:"f270";s:37:"csh/de.locallang_pbsurvey_results.xml";s:4:"c81d";s:24:"csh/locallang_manual.xml";s:4:"e8f7";s:22:"csh/locallang_mod1.xml";s:4:"3150";s:26:"csh/locallang_modfunc1.xml";s:4:"3f6a";s:34:"csh/locallang_pbsurvey_answers.xml";s:4:"4211";s:31:"csh/locallang_pbsurvey_item.xml";s:4:"e91c";s:34:"csh/locallang_pbsurvey_results.xml";s:4:"b56d";s:27:"csh/nl.locallang_manual.xml";s:4:"29e9";s:25:"csh/nl.locallang_mod1.xml";s:4:"c05a";s:29:"csh/nl.locallang_modfunc1.xml";s:4:"5e18";s:34:"csh/nl.locallang_pbsurvey_item.xml";s:4:"b80f";s:37:"csh/nl.locallang_pbsurvey_results.xml";s:4:"bd07";s:27:"csh/no.locallang_manual.xml";s:4:"a7f1";s:34:"csh/no.locallang_pbsurvey_item.xml";s:4:"4500";s:37:"csh/no.locallang_pbsurvey_results.xml";s:4:"9d68";s:15:"csh/CVS/Entries";s:4:"b841";s:21:"csh/CVS/Entries.Extra";s:4:"72f4";s:25:"csh/CVS/Entries.Extra.Old";s:4:"0699";s:19:"csh/CVS/Entries.Old";s:4:"b9a1";s:18:"csh/CVS/Repository";s:4:"65d9";s:12:"csh/CVS/Root";s:4:"8497";s:26:"csh/CVS/TortoiseCVS.Status";s:4:"616e";s:35:"csh/images/manual_step-1-2-3_en.png";s:4:"3ea0";s:32:"csh/images/manual_step-11_en.png";s:4:"62f5";s:32:"csh/images/manual_step-12_en.png";s:4:"0d71";s:32:"csh/images/manual_step-13_en.png";s:4:"f0d5";s:35:"csh/images/manual_step-14-15_en.png";s:4:"67cb";s:32:"csh/images/manual_step-16_en.png";s:4:"8068";s:32:"csh/images/manual_step-19_en.png";s:4:"e1fd";s:31:"csh/images/manual_step-4_en.png";s:4:"3a4e";s:31:"csh/images/manual_step-5_en.png";s:4:"22d7";s:31:"csh/images/manual_step-6_en.png";s:4:"7760";s:38:"csh/images/manual_step-7-8-9-10_en.png";s:4:"d5f9";s:22:"csh/images/CVS/Entries";s:4:"5686";s:28:"csh/images/CVS/Entries.Extra";s:4:"d0a3";s:32:"csh/images/CVS/Entries.Extra.Old";s:4:"d0a3";s:26:"csh/images/CVS/Entries.Old";s:4:"b2a7";s:25:"csh/images/CVS/Repository";s:4:"6dd2";s:19:"csh/images/CVS/Root";s:4:"8497";s:33:"csh/images/CVS/TortoiseCVS.Status";s:4:"616e";s:11:"CVS/Entries";s:4:"7e15";s:17:"CVS/Entries.Extra";s:4:"8245";s:21:"CVS/Entries.Extra.Old";s:4:"9067";s:15:"CVS/Entries.Old";s:4:"5de4";s:14:"CVS/Repository";s:4:"a69c";s:8:"CVS/Root";s:4:"8497";s:22:"CVS/TortoiseCVS.Status";s:4:"6f16";s:12:"doc/TODO.txt";s:4:"93c6";s:14:"doc/manual.sxw";s:4:"5e90";s:15:"doc/CVS/Entries";s:4:"0a20";s:21:"doc/CVS/Entries.Extra";s:4:"38e5";s:25:"doc/CVS/Entries.Extra.Old";s:4:"ef9e";s:19:"doc/CVS/Entries.Old";s:4:"cfa5";s:18:"doc/CVS/Repository";s:4:"69a4";s:12:"doc/CVS/Root";s:4:"8497";s:26:"doc/CVS/TortoiseCVS.Status";s:4:"616e";s:19:"icons/icon_mod1.gif";s:4:"e008";s:30:"icons/icon_pbsurvey_item_1.gif";s:4:"7c6d";s:31:"icons/icon_pbsurvey_item_10.gif";s:4:"a672";s:34:"icons/icon_pbsurvey_item_10__h.gif";s:4:"6c57";s:31:"icons/icon_pbsurvey_item_11.gif";s:4:"345a";s:34:"icons/icon_pbsurvey_item_11__h.gif";s:4:"de98";s:31:"icons/icon_pbsurvey_item_12.gif";s:4:"4b03";s:34:"icons/icon_pbsurvey_item_12__h.gif";s:4:"83be";s:31:"icons/icon_pbsurvey_item_13.gif";s:4:"7fdb";s:34:"icons/icon_pbsurvey_item_13__h.gif";s:4:"d0d8";s:31:"icons/icon_pbsurvey_item_14.gif";s:4:"32ec";s:34:"icons/icon_pbsurvey_item_14__h.gif";s:4:"79ae";s:31:"icons/icon_pbsurvey_item_15.gif";s:4:"74c8";s:34:"icons/icon_pbsurvey_item_15__h.gif";s:4:"bdab";s:31:"icons/icon_pbsurvey_item_16.gif";s:4:"2e12";s:34:"icons/icon_pbsurvey_item_16__h.gif";s:4:"b07b";s:31:"icons/icon_pbsurvey_item_17.gif";s:4:"d50b";s:34:"icons/icon_pbsurvey_item_17__h.gif";s:4:"3a78";s:31:"icons/icon_pbsurvey_item_18.gif";s:4:"76dc";s:34:"icons/icon_pbsurvey_item_18__h.gif";s:4:"059f";s:31:"icons/icon_pbsurvey_item_19.gif";s:4:"4e22";s:34:"icons/icon_pbsurvey_item_19__h.gif";s:4:"16d2";s:33:"icons/icon_pbsurvey_item_1__h.gif";s:4:"025e";s:30:"icons/icon_pbsurvey_item_2.gif";s:4:"50e2";s:31:"icons/icon_pbsurvey_item_20.gif";s:4:"00a0";s:34:"icons/icon_pbsurvey_item_20__h.gif";s:4:"c9c4";s:31:"icons/icon_pbsurvey_item_21.gif";s:4:"f567";s:34:"icons/icon_pbsurvey_item_21__h.gif";s:4:"af11";s:31:"icons/icon_pbsurvey_item_22.gif";s:4:"9e8c";s:34:"icons/icon_pbsurvey_item_22__h.gif";s:4:"02f8";s:31:"icons/icon_pbsurvey_item_23.gif";s:4:"9ce5";s:34:"icons/icon_pbsurvey_item_23__h.gif";s:4:"44bc";s:33:"icons/icon_pbsurvey_item_2__h.gif";s:4:"284d";s:30:"icons/icon_pbsurvey_item_3.gif";s:4:"f92c";s:33:"icons/icon_pbsurvey_item_3__h.gif";s:4:"e3d3";s:30:"icons/icon_pbsurvey_item_4.gif";s:4:"8d28";s:33:"icons/icon_pbsurvey_item_4__h.gif";s:4:"d380";s:30:"icons/icon_pbsurvey_item_5.gif";s:4:"e78a";s:33:"icons/icon_pbsurvey_item_5__h.gif";s:4:"19a5";s:30:"icons/icon_pbsurvey_item_6.gif";s:4:"021e";s:33:"icons/icon_pbsurvey_item_6__h.gif";s:4:"463c";s:30:"icons/icon_pbsurvey_item_7.gif";s:4:"efc6";s:33:"icons/icon_pbsurvey_item_7__h.gif";s:4:"4ef9";s:30:"icons/icon_pbsurvey_item_8.gif";s:4:"3b38";s:33:"icons/icon_pbsurvey_item_8__h.gif";s:4:"ad0a";s:30:"icons/icon_pbsurvey_item_9.gif";s:4:"bc7d";s:33:"icons/icon_pbsurvey_item_9__h.gif";s:4:"09cb";s:31:"icons/icon_tx_pbsurvey_item.gif";s:4:"e008";s:34:"icons/icon_tx_pbsurvey_item__h.gif";s:4:"9c93";s:34:"icons/icon_tx_pbsurvey_results.gif";s:4:"6904";s:37:"icons/icon_tx_pbsurvey_results__h.gif";s:4:"0698";s:21:"icons/icon_wizard.gif";s:4:"ffe3";s:20:"icons/survey_wiz.gif";s:4:"ac20";s:17:"icons/CVS/Entries";s:4:"4346";s:23:"icons/CVS/Entries.Extra";s:4:"fae4";s:27:"icons/CVS/Entries.Extra.Old";s:4:"fae4";s:21:"icons/CVS/Entries.Old";s:4:"e26d";s:20:"icons/CVS/Repository";s:4:"061d";s:14:"icons/CVS/Root";s:4:"8497";s:28:"icons/CVS/TortoiseCVS.Status";s:4:"616e";s:21:"lang/de.locallang.xml";s:4:"5cc3";s:24:"lang/de.locallang_db.xml";s:4:"12f4";s:26:"lang/de.locallang_mod1.xml";s:4:"a91e";s:25:"lang/de.locallang_wiz.xml";s:4:"d278";s:21:"lang/dk.locallang.xml";s:4:"e7ac";s:24:"lang/dk.locallang_db.xml";s:4:"c48f";s:26:"lang/dk.locallang_mod1.xml";s:4:"bfcf";s:25:"lang/dk.locallang_wiz.xml";s:4:"16a9";s:21:"lang/fr.locallang.xml";s:4:"9e27";s:24:"lang/fr.locallang_db.xml";s:4:"05fc";s:26:"lang/fr.locallang_mod1.xml";s:4:"59b4";s:25:"lang/fr.locallang_wiz.xml";s:4:"9071";s:18:"lang/locallang.xml";s:4:"3deb";s:21:"lang/locallang_db.xml";s:4:"8476";s:23:"lang/locallang_mod1.xml";s:4:"9b09";s:27:"lang/locallang_modfunc1.xml";s:4:"1176";s:22:"lang/locallang_wiz.xml";s:4:"33f9";s:21:"lang/nl.locallang.xml";s:4:"de5a";s:24:"lang/nl.locallang_db.xml";s:4:"a073";s:26:"lang/nl.locallang_mod1.xml";s:4:"3c4b";s:30:"lang/nl.locallang_modfunc1.xml";s:4:"a6a1";s:25:"lang/nl.locallang_wiz.xml";s:4:"d098";s:21:"lang/no.locallang.xml";s:4:"a663";s:24:"lang/no.locallang_db.xml";s:4:"a64b";s:26:"lang/no.locallang_mod1.xml";s:4:"0f6f";s:25:"lang/no.locallang_wiz.xml";s:4:"8dc7";s:16:"lang/CVS/Entries";s:4:"2b50";s:22:"lang/CVS/Entries.Extra";s:4:"2e11";s:26:"lang/CVS/Entries.Extra.Old";s:4:"90dd";s:20:"lang/CVS/Entries.Old";s:4:"ba36";s:19:"lang/CVS/Repository";s:4:"b609";s:13:"lang/CVS/Root";s:4:"8497";s:27:"lang/CVS/TortoiseCVS.Status";s:4:"616e";s:13:"mod1/conf.php";s:4:"cf06";s:14:"mod1/index.php";s:4:"27d5";s:16:"mod1/CVS/Entries";s:4:"772d";s:22:"mod1/CVS/Entries.Extra";s:4:"77a2";s:26:"mod1/CVS/Entries.Extra.Old";s:4:"b94d";s:20:"mod1/CVS/Entries.Old";s:4:"5b4d";s:19:"mod1/CVS/Repository";s:4:"bf7e";s:13:"mod1/CVS/Root";s:4:"8497";s:27:"mod1/CVS/TortoiseCVS.Status";s:4:"616e";s:39:"modfunc1/class.tx_pbsurvey_modfunc1.php";s:4:"42f0";s:20:"modfunc1/CVS/Entries";s:4:"8727";s:26:"modfunc1/CVS/Entries.Extra";s:4:"275f";s:30:"modfunc1/CVS/Entries.Extra.Old";s:4:"275f";s:24:"modfunc1/CVS/Entries.Old";s:4:"95fe";s:23:"modfunc1/CVS/Repository";s:4:"4e10";s:17:"modfunc1/CVS/Root";s:4:"8497";s:31:"modfunc1/CVS/TortoiseCVS.Status";s:4:"616e";s:29:"pi1/class.tx_pbsurvey_pi1.php";s:4:"1eea";s:37:"pi1/class.tx_pbsurvey_pi1_wizicon.php";s:4:"bb39";s:20:"pi1/de.locallang.xml";s:4:"517d";s:20:"pi1/dk.locallang.xml";s:4:"4c14";s:20:"pi1/fi.locallang.xml";s:4:"c313";s:20:"pi1/fr.locallang.xml";s:4:"74f0";s:17:"pi1/locallang.xml";s:4:"6e98";s:20:"pi1/nl.locallang.xml";s:4:"798c";s:20:"pi1/no.locallang.xml";s:4:"1b01";s:17:"pi1/template.html";s:4:"235f";s:15:"pi1/CVS/Entries";s:4:"30fe";s:21:"pi1/CVS/Entries.Extra";s:4:"b02a";s:25:"pi1/CVS/Entries.Extra.Old";s:4:"c913";s:19:"pi1/CVS/Entries.Old";s:4:"5486";s:18:"pi1/CVS/Repository";s:4:"3370";s:12:"pi1/CVS/Root";s:4:"8497";s:26:"pi1/CVS/TortoiseCVS.Status";s:4:"616e";s:20:"static/css/setup.txt";s:4:"9ace";s:22:"static/css/CVS/Entries";s:4:"fc49";s:28:"static/css/CVS/Entries.Extra";s:4:"d623";s:32:"static/css/CVS/Entries.Extra.Old";s:4:"d623";s:26:"static/css/CVS/Entries.Old";s:4:"5610";s:25:"static/css/CVS/Repository";s:4:"d2b8";s:19:"static/css/CVS/Root";s:4:"8497";s:33:"static/css/CVS/TortoiseCVS.Status";s:4:"616e";s:18:"static/CVS/Entries";s:4:"20da";s:24:"static/CVS/Entries.Extra";s:4:"d34d";s:28:"static/CVS/Entries.Extra.Old";s:4:"d41d";s:22:"static/CVS/Entries.Old";s:4:"6cc4";s:21:"static/CVS/Repository";s:4:"0467";s:15:"static/CVS/Root";s:4:"8497";s:29:"static/CVS/TortoiseCVS.Status";s:4:"616e";s:15:"wizard/conf.php";s:4:"e95c";s:15:"wizard/init.php";s:4:"6e5d";s:25:"wizard/wizard_answers.php";s:4:"6652";s:18:"wizard/CVS/Entries";s:4:"5200";s:24:"wizard/CVS/Entries.Extra";s:4:"f431";s:28:"wizard/CVS/Entries.Extra.Old";s:4:"7d61";s:22:"wizard/CVS/Entries.Old";s:4:"3332";s:21:"wizard/CVS/Repository";s:4:"280f";s:15:"wizard/CVS/Root";s:4:"8497";s:29:"wizard/CVS/TortoiseCVS.Status";s:4:"616e";s:16:"wizard2/conf.php";s:4:"e35a";s:16:"wizard2/init.php";s:4:"6e5d";s:29:"wizard2/wizard_conditions.php";s:4:"6917";s:19:"wizard2/CVS/Entries";s:4:"b3d8";s:25:"wizard2/CVS/Entries.Extra";s:4:"5b32";s:29:"wizard2/CVS/Entries.Extra.Old";s:4:"0564";s:23:"wizard2/CVS/Entries.Old";s:4:"301e";s:22:"wizard2/CVS/Repository";s:4:"cc3e";s:16:"wizard2/CVS/Root";s:4:"8497";s:30:"wizard2/CVS/TortoiseCVS.Status";s:4:"616e";}',
+	'version' => '1.0.6',
+	'_md5_values_when_last_written' => 'a:230:{s:9:"Changelog";s:4:"facc";s:21:"ext_conf_template.txt";s:4:"8a3d";s:12:"ext_icon.gif";s:4:"e008";s:17:"ext_localconf.php";s:4:"d32c";s:15:"ext_php_api.dat";s:4:"f350";s:14:"ext_tables.php";s:4:"c45a";s:14:"ext_tables.sql";s:4:"73d9";s:28:"ext_typoscript_constants.txt";s:4:"3aa3";s:24:"ext_typoscript_setup.txt";s:4:"c12d";s:15:"flexform_ds.xml";s:4:"d7ef";s:7:"tca.php";s:4:"c5ed";s:34:"csh/de.locallang_pbsurvey_item.xml";s:4:"f270";s:37:"csh/de.locallang_pbsurvey_results.xml";s:4:"c81d";s:24:"csh/locallang_manual.xml";s:4:"e8f7";s:22:"csh/locallang_mod1.xml";s:4:"3150";s:26:"csh/locallang_modfunc1.xml";s:4:"3f6a";s:34:"csh/locallang_pbsurvey_answers.xml";s:4:"4211";s:31:"csh/locallang_pbsurvey_item.xml";s:4:"e91c";s:34:"csh/locallang_pbsurvey_results.xml";s:4:"b56d";s:27:"csh/nl.locallang_manual.xml";s:4:"29e9";s:25:"csh/nl.locallang_mod1.xml";s:4:"c05a";s:29:"csh/nl.locallang_modfunc1.xml";s:4:"5e18";s:34:"csh/nl.locallang_pbsurvey_item.xml";s:4:"b80f";s:37:"csh/nl.locallang_pbsurvey_results.xml";s:4:"bd07";s:27:"csh/no.locallang_manual.xml";s:4:"a7f1";s:34:"csh/no.locallang_pbsurvey_item.xml";s:4:"4500";s:37:"csh/no.locallang_pbsurvey_results.xml";s:4:"9d68";s:15:"csh/CVS/Entries";s:4:"b841";s:21:"csh/CVS/Entries.Extra";s:4:"72f4";s:25:"csh/CVS/Entries.Extra.Old";s:4:"0699";s:19:"csh/CVS/Entries.Old";s:4:"b9a1";s:18:"csh/CVS/Repository";s:4:"65d9";s:12:"csh/CVS/Root";s:4:"2caf";s:26:"csh/CVS/TortoiseCVS.Status";s:4:"616e";s:35:"csh/images/manual_step-1-2-3_en.png";s:4:"3ea0";s:32:"csh/images/manual_step-11_en.png";s:4:"62f5";s:32:"csh/images/manual_step-12_en.png";s:4:"0d71";s:32:"csh/images/manual_step-13_en.png";s:4:"f0d5";s:35:"csh/images/manual_step-14-15_en.png";s:4:"67cb";s:32:"csh/images/manual_step-16_en.png";s:4:"8068";s:32:"csh/images/manual_step-19_en.png";s:4:"e1fd";s:31:"csh/images/manual_step-4_en.png";s:4:"3a4e";s:31:"csh/images/manual_step-5_en.png";s:4:"22d7";s:31:"csh/images/manual_step-6_en.png";s:4:"7760";s:38:"csh/images/manual_step-7-8-9-10_en.png";s:4:"d5f9";s:22:"csh/images/CVS/Entries";s:4:"5686";s:28:"csh/images/CVS/Entries.Extra";s:4:"d0a3";s:32:"csh/images/CVS/Entries.Extra.Old";s:4:"d0a3";s:26:"csh/images/CVS/Entries.Old";s:4:"b2a7";s:25:"csh/images/CVS/Repository";s:4:"6dd2";s:19:"csh/images/CVS/Root";s:4:"2caf";s:33:"csh/images/CVS/TortoiseCVS.Status";s:4:"616e";s:11:"CVS/Entries";s:4:"17be";s:17:"CVS/Entries.Extra";s:4:"86a4";s:21:"CVS/Entries.Extra.Old";s:4:"8245";s:15:"CVS/Entries.Old";s:4:"7e15";s:14:"CVS/Repository";s:4:"a69c";s:8:"CVS/Root";s:4:"2caf";s:22:"CVS/TortoiseCVS.Status";s:4:"6f16";s:12:"doc/TODO.txt";s:4:"93c6";s:14:"doc/manual.sxw";s:4:"5e90";s:15:"doc/CVS/Entries";s:4:"59e3";s:21:"doc/CVS/Entries.Extra";s:4:"38e5";s:25:"doc/CVS/Entries.Extra.Old";s:4:"38e5";s:19:"doc/CVS/Entries.Old";s:4:"0a20";s:18:"doc/CVS/Repository";s:4:"69a4";s:12:"doc/CVS/Root";s:4:"2caf";s:26:"doc/CVS/TortoiseCVS.Status";s:4:"616e";s:19:"icons/icon_mod1.gif";s:4:"e008";s:30:"icons/icon_pbsurvey_item_1.gif";s:4:"7c6d";s:31:"icons/icon_pbsurvey_item_10.gif";s:4:"a672";s:34:"icons/icon_pbsurvey_item_10__h.gif";s:4:"6c57";s:31:"icons/icon_pbsurvey_item_11.gif";s:4:"345a";s:34:"icons/icon_pbsurvey_item_11__h.gif";s:4:"de98";s:31:"icons/icon_pbsurvey_item_12.gif";s:4:"4b03";s:34:"icons/icon_pbsurvey_item_12__h.gif";s:4:"83be";s:31:"icons/icon_pbsurvey_item_13.gif";s:4:"7fdb";s:34:"icons/icon_pbsurvey_item_13__h.gif";s:4:"d0d8";s:31:"icons/icon_pbsurvey_item_14.gif";s:4:"32ec";s:34:"icons/icon_pbsurvey_item_14__h.gif";s:4:"79ae";s:31:"icons/icon_pbsurvey_item_15.gif";s:4:"74c8";s:34:"icons/icon_pbsurvey_item_15__h.gif";s:4:"bdab";s:31:"icons/icon_pbsurvey_item_16.gif";s:4:"2e12";s:34:"icons/icon_pbsurvey_item_16__h.gif";s:4:"b07b";s:31:"icons/icon_pbsurvey_item_17.gif";s:4:"d50b";s:34:"icons/icon_pbsurvey_item_17__h.gif";s:4:"3a78";s:31:"icons/icon_pbsurvey_item_18.gif";s:4:"76dc";s:34:"icons/icon_pbsurvey_item_18__h.gif";s:4:"059f";s:31:"icons/icon_pbsurvey_item_19.gif";s:4:"4e22";s:34:"icons/icon_pbsurvey_item_19__h.gif";s:4:"16d2";s:33:"icons/icon_pbsurvey_item_1__h.gif";s:4:"025e";s:30:"icons/icon_pbsurvey_item_2.gif";s:4:"50e2";s:31:"icons/icon_pbsurvey_item_20.gif";s:4:"00a0";s:34:"icons/icon_pbsurvey_item_20__h.gif";s:4:"c9c4";s:31:"icons/icon_pbsurvey_item_21.gif";s:4:"f567";s:34:"icons/icon_pbsurvey_item_21__h.gif";s:4:"af11";s:31:"icons/icon_pbsurvey_item_22.gif";s:4:"9e8c";s:34:"icons/icon_pbsurvey_item_22__h.gif";s:4:"02f8";s:31:"icons/icon_pbsurvey_item_23.gif";s:4:"9ce5";s:34:"icons/icon_pbsurvey_item_23__h.gif";s:4:"44bc";s:33:"icons/icon_pbsurvey_item_2__h.gif";s:4:"284d";s:30:"icons/icon_pbsurvey_item_3.gif";s:4:"f92c";s:33:"icons/icon_pbsurvey_item_3__h.gif";s:4:"e3d3";s:30:"icons/icon_pbsurvey_item_4.gif";s:4:"8d28";s:33:"icons/icon_pbsurvey_item_4__h.gif";s:4:"d380";s:30:"icons/icon_pbsurvey_item_5.gif";s:4:"e78a";s:33:"icons/icon_pbsurvey_item_5__h.gif";s:4:"19a5";s:30:"icons/icon_pbsurvey_item_6.gif";s:4:"021e";s:33:"icons/icon_pbsurvey_item_6__h.gif";s:4:"463c";s:30:"icons/icon_pbsurvey_item_7.gif";s:4:"efc6";s:33:"icons/icon_pbsurvey_item_7__h.gif";s:4:"4ef9";s:30:"icons/icon_pbsurvey_item_8.gif";s:4:"3b38";s:33:"icons/icon_pbsurvey_item_8__h.gif";s:4:"ad0a";s:30:"icons/icon_pbsurvey_item_9.gif";s:4:"bc7d";s:33:"icons/icon_pbsurvey_item_9__h.gif";s:4:"09cb";s:31:"icons/icon_tx_pbsurvey_item.gif";s:4:"e008";s:34:"icons/icon_tx_pbsurvey_item__h.gif";s:4:"9c93";s:34:"icons/icon_tx_pbsurvey_results.gif";s:4:"6904";s:37:"icons/icon_tx_pbsurvey_results__h.gif";s:4:"0698";s:21:"icons/icon_wizard.gif";s:4:"ffe3";s:20:"icons/survey_wiz.gif";s:4:"ac20";s:17:"icons/CVS/Entries";s:4:"0e77";s:23:"icons/CVS/Entries.Extra";s:4:"cdc1";s:27:"icons/CVS/Entries.Extra.Old";s:4:"cdc1";s:21:"icons/CVS/Entries.Old";s:4:"78a9";s:20:"icons/CVS/Repository";s:4:"061d";s:14:"icons/CVS/Root";s:4:"2caf";s:28:"icons/CVS/TortoiseCVS.Status";s:4:"616e";s:21:"lang/de.locallang.xml";s:4:"5cc3";s:24:"lang/de.locallang_db.xml";s:4:"12f4";s:26:"lang/de.locallang_mod1.xml";s:4:"a91e";s:25:"lang/de.locallang_wiz.xml";s:4:"d278";s:21:"lang/dk.locallang.xml";s:4:"e7ac";s:24:"lang/dk.locallang_db.xml";s:4:"c48f";s:26:"lang/dk.locallang_mod1.xml";s:4:"bfcf";s:25:"lang/dk.locallang_wiz.xml";s:4:"16a9";s:21:"lang/fr.locallang.xml";s:4:"9e27";s:24:"lang/fr.locallang_db.xml";s:4:"05fc";s:26:"lang/fr.locallang_mod1.xml";s:4:"59b4";s:25:"lang/fr.locallang_wiz.xml";s:4:"9071";s:18:"lang/locallang.xml";s:4:"3deb";s:21:"lang/locallang_db.xml";s:4:"8476";s:23:"lang/locallang_mod1.xml";s:4:"9b09";s:27:"lang/locallang_modfunc1.xml";s:4:"1176";s:22:"lang/locallang_wiz.xml";s:4:"33f9";s:21:"lang/nl.locallang.xml";s:4:"de5a";s:24:"lang/nl.locallang_db.xml";s:4:"a073";s:26:"lang/nl.locallang_mod1.xml";s:4:"3c4b";s:30:"lang/nl.locallang_modfunc1.xml";s:4:"a6a1";s:25:"lang/nl.locallang_wiz.xml";s:4:"d098";s:21:"lang/no.locallang.xml";s:4:"a663";s:24:"lang/no.locallang_db.xml";s:4:"a64b";s:26:"lang/no.locallang_mod1.xml";s:4:"0f6f";s:25:"lang/no.locallang_wiz.xml";s:4:"8dc7";s:16:"lang/CVS/Entries";s:4:"bf46";s:22:"lang/CVS/Entries.Extra";s:4:"ec2e";s:26:"lang/CVS/Entries.Extra.Old";s:4:"2e11";s:20:"lang/CVS/Entries.Old";s:4:"2b50";s:19:"lang/CVS/Repository";s:4:"b609";s:13:"lang/CVS/Root";s:4:"2caf";s:27:"lang/CVS/TortoiseCVS.Status";s:4:"616e";s:13:"mod1/conf.php";s:4:"cf06";s:14:"mod1/index.php";s:4:"27d5";s:16:"mod1/CVS/Entries";s:4:"c20b";s:22:"mod1/CVS/Entries.Extra";s:4:"b94d";s:26:"mod1/CVS/Entries.Extra.Old";s:4:"77a2";s:20:"mod1/CVS/Entries.Old";s:4:"772d";s:19:"mod1/CVS/Repository";s:4:"bf7e";s:13:"mod1/CVS/Root";s:4:"2caf";s:27:"mod1/CVS/TortoiseCVS.Status";s:4:"616e";s:39:"modfunc1/class.tx_pbsurvey_modfunc1.php";s:4:"42f0";s:20:"modfunc1/CVS/Entries";s:4:"8727";s:26:"modfunc1/CVS/Entries.Extra";s:4:"275f";s:30:"modfunc1/CVS/Entries.Extra.Old";s:4:"275f";s:24:"modfunc1/CVS/Entries.Old";s:4:"95fe";s:23:"modfunc1/CVS/Repository";s:4:"4e10";s:17:"modfunc1/CVS/Root";s:4:"2caf";s:31:"modfunc1/CVS/TortoiseCVS.Status";s:4:"616e";s:29:"pi1/class.tx_pbsurvey_pi1.php";s:4:"39a0";s:37:"pi1/class.tx_pbsurvey_pi1_wizicon.php";s:4:"bb39";s:20:"pi1/de.locallang.xml";s:4:"517d";s:20:"pi1/dk.locallang.xml";s:4:"4c14";s:20:"pi1/fi.locallang.xml";s:4:"c313";s:20:"pi1/fr.locallang.xml";s:4:"74f0";s:17:"pi1/locallang.xml";s:4:"6e98";s:20:"pi1/nl.locallang.xml";s:4:"798c";s:20:"pi1/no.locallang.xml";s:4:"1b01";s:17:"pi1/template.html";s:4:"235f";s:15:"pi1/CVS/Entries";s:4:"135d";s:21:"pi1/CVS/Entries.Extra";s:4:"d758";s:25:"pi1/CVS/Entries.Extra.Old";s:4:"b02a";s:19:"pi1/CVS/Entries.Old";s:4:"30fe";s:18:"pi1/CVS/Repository";s:4:"3370";s:12:"pi1/CVS/Root";s:4:"2caf";s:26:"pi1/CVS/TortoiseCVS.Status";s:4:"616e";s:20:"static/css/setup.txt";s:4:"9ace";s:22:"static/css/CVS/Entries";s:4:"fc49";s:28:"static/css/CVS/Entries.Extra";s:4:"d623";s:32:"static/css/CVS/Entries.Extra.Old";s:4:"d623";s:26:"static/css/CVS/Entries.Old";s:4:"5610";s:25:"static/css/CVS/Repository";s:4:"d2b8";s:19:"static/css/CVS/Root";s:4:"2caf";s:33:"static/css/CVS/TortoiseCVS.Status";s:4:"616e";s:18:"static/CVS/Entries";s:4:"20da";s:24:"static/CVS/Entries.Extra";s:4:"d34d";s:28:"static/CVS/Entries.Extra.Old";s:4:"d41d";s:22:"static/CVS/Entries.Old";s:4:"6cc4";s:21:"static/CVS/Repository";s:4:"0467";s:15:"static/CVS/Root";s:4:"2caf";s:29:"static/CVS/TortoiseCVS.Status";s:4:"616e";s:15:"wizard/conf.php";s:4:"e95c";s:15:"wizard/init.php";s:4:"6e5d";s:25:"wizard/wizard_answers.php";s:4:"6652";s:18:"wizard/CVS/Entries";s:4:"5200";s:24:"wizard/CVS/Entries.Extra";s:4:"f431";s:28:"wizard/CVS/Entries.Extra.Old";s:4:"7d61";s:22:"wizard/CVS/Entries.Old";s:4:"3332";s:21:"wizard/CVS/Repository";s:4:"280f";s:15:"wizard/CVS/Root";s:4:"2caf";s:29:"wizard/CVS/TortoiseCVS.Status";s:4:"616e";s:16:"wizard2/conf.php";s:4:"e35a";s:16:"wizard2/init.php";s:4:"6e5d";s:29:"wizard2/wizard_conditions.php";s:4:"6917";s:19:"wizard2/CVS/Entries";s:4:"b5a0";s:25:"wizard2/CVS/Entries.Extra";s:4:"5b32";s:29:"wizard2/CVS/Entries.Extra.Old";s:4:"5b32";s:23:"wizard2/CVS/Entries.Old";s:4:"b3d8";s:22:"wizard2/CVS/Repository";s:4:"cc3e";s:16:"wizard2/CVS/Root";s:4:"2caf";s:30:"wizard2/CVS/TortoiseCVS.Status";s:4:"616e";}',
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
