@@ -1,3 +1,6 @@
+2006-05-18 - Patrick Broens <patrick@patrickbroens.nl>
+ ~ Bugfix on server and client side form validation for question type "Open Answer - Number"
+
 2006-05-14 - Patrick Broens <patrick@patrickbroens.nl>
  + Added question type 23, Choice - Multiple Answers (Selectbox)
  - Deleted table row 'sql', which was not in use and is a reserved word for MySQL 5
